--- a/android/vision-quickstart/app/src/main/AndroidManifest.xml
+++ b/android/vision-quickstart/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
     <application
         android:name="androidx.multidex.MultiDexApplication"
         android:icon="@drawable/logo_mlkit"
-        android:label="@string/app_name"
+        android:label="OCR"
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.AppCompat">
 
